--- a/redis-spring/.gitignore
+++ b/redis-spring/.gitignore
@@ -1,3 +1,35 @@
-.classpath
-.settings
+# project logs
+logs/
+out/
+
+# jrebel
+rebel.xml
+
+# maven ignore
+target/
+*.jar
+*.war
+*.tar
+*.tar.gz
+
+# eclipse ignore
+.settings/
 .project
+.classpath
+
+# idea ignore
+.idea/
+*.ipr
+*.iml
+*.iws
+
+# temp ignore
+*.log
+*.cache
+*.diff
+*.patch
+*.tmp
+
+# system ignore
+.DS_Store
+Thumbs.db
